[package]
name = "rust-kernel"
version = "0.1.0"
authors = ["koppenk <koppen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Disable unwinding - which is a complicated process and requires Os specific libraries which this rust-kernel does not want to use
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"